--- a/Space Fight/Base.lproj/Main.storyboard
+++ b/Space Fight/Base.lproj/Main.storyboard
@@ -87,6 +87,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="565" y="42"/>
         </scene>
     </scenes>
 </document>
