--- a/Space Fight/Base.lproj/Main.storyboard
+++ b/Space Fight/Base.lproj/Main.storyboard
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="50" translatesAutoresizingMaskIntoConstraints="NO" id="AmZ-GN-vf6">
-                                <rect key="frame" x="0.0" y="279" width="414" height="338.33333333333326"/>
+                                <rect key="frame" x="0.0" y="226.33333333333334" width="414" height="443.66666666666663"/>
                                 <subviews>
                                     <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="EF6-VL-FWJ">
                                         <rect key="frame" x="142.66666666666666" y="0.0" width="128.99999999999997" height="29"/>
@@ -32,13 +32,31 @@
                                         </connections>
                                     </segmentedControl>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sign in" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rta-Th-jaH">
-                                        <rect key="frame" x="181.33333333333334" y="78" width="51.666666666666657" height="20.333333333333329"/>
+                                        <rect key="frame" x="181.33333333333334" y="77.999999999999972" width="51.666666666666657" height="20.333333333333329"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="gyC-SC-VEX">
+                                        <rect key="frame" x="0.0" y="148.33333333333334" width="414" height="55.333333333333343"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Rbr-iK-wPa">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="20.333333333333332"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QlZ-ll-QyB">
+                                                <rect key="frame" x="0.0" y="25.333333333333314" width="414" height="30"/>
+                                                <nil key="textColor"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                        </subviews>
+                                        <viewLayoutGuide key="safeArea" id="wF4-Nn-kra"/>
+                                    </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="kH1-7u-aAy">
-                                        <rect key="frame" x="0.0" y="148.33333333333331" width="414" height="30"/>
+                                        <rect key="frame" x="0.0" y="253.66666666666663" width="414" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xxG-Pf-7Lp">
                                                 <rect key="frame" x="0.0" y="0.0" width="41" height="30"/>
@@ -55,7 +73,7 @@
                                         </subviews>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="ehl-0C-ybn">
-                                        <rect key="frame" x="0.0" y="228.33333333333331" width="414" height="30"/>
+                                        <rect key="frame" x="0.0" y="333.66666666666663" width="414" height="30"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lZn-eL-hOc">
                                                 <rect key="frame" x="0.0" y="0.0" width="73.666666666666671" height="30"/>
@@ -72,7 +90,7 @@
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hXp-Rh-Prf">
-                                        <rect key="frame" x="183.66666666666666" y="308.33333333333337" width="47" height="30"/>
+                                        <rect key="frame" x="183.66666666666666" y="413.66666666666663" width="47" height="30"/>
                                         <state key="normal" title="Sign In"/>
                                         <connections>
                                             <action selector="signInButtonTapped:" destination="1yE-jP-svw" eventType="touchUpInside" id="Q36-wi-KhF"/>
@@ -81,9 +99,13 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="kH1-7u-aAy" firstAttribute="leading" secondItem="AmZ-GN-vf6" secondAttribute="leading" id="4Nc-aV-h67"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="gyC-SC-VEX" secondAttribute="trailing" id="I7e-D1-JJG"/>
                                     <constraint firstItem="ehl-0C-ybn" firstAttribute="leading" secondItem="AmZ-GN-vf6" secondAttribute="leading" id="Xfe-nF-t4l"/>
+                                    <constraint firstItem="kH1-7u-aAy" firstAttribute="top" secondItem="gyC-SC-VEX" secondAttribute="bottom" constant="30" id="Z50-km-LYI"/>
+                                    <constraint firstItem="gyC-SC-VEX" firstAttribute="top" secondItem="rta-Th-jaH" secondAttribute="bottom" constant="30" id="gaS-Hd-ViQ"/>
                                     <constraint firstAttribute="trailing" secondItem="kH1-7u-aAy" secondAttribute="trailing" id="ncr-N1-5pO"/>
                                     <constraint firstAttribute="trailing" secondItem="ehl-0C-ybn" secondAttribute="trailing" id="r8g-Xp-8I5"/>
+                                    <constraint firstItem="gyC-SC-VEX" firstAttribute="leading" secondItem="AmZ-GN-vf6" secondAttribute="leadingMargin" id="sib-QK-snQ"/>
                                 </constraints>
                             </stackView>
                         </subviews>
@@ -101,6 +123,7 @@
                         <outlet property="signInButton" destination="hXp-Rh-Prf" id="jyu-aQ-nef"/>
                         <outlet property="signInLabel" destination="rta-Th-jaH" id="LPX-M6-QIz"/>
                         <outlet property="signInSelector" destination="EF6-VL-FWJ" id="nD6-FN-fOA"/>
+                        <outlet property="usernameTextField" destination="QlZ-ll-QyB" id="3fT-g3-ShN"/>
                         <segue destination="BV1-FR-VrT" kind="show" identifier="goToHome" id="3Sy-KE-Fkq"/>
                     </connections>
                 </viewController>
